[package]
name = "cairo_lang_reader"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
cairo-lang-macro = { version = "0.2.0", git = "https://github.com/software-mansion/scarb.git" }
cairo-lang-parser = "*"
cairo-lang-syntax = "*"
cairo-lang-defs = "*"
cairo-lang-diagnostics = "*"
cairo-lang-filesystem = "*"
smol_str = "0.3.2"

[patch.crates-io]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "ff4222e" }
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo", tag = "v2.12.3" }
cairo-lang-debug = { git = "https://github.com/starkware-libs/cairo", tag = "v2.12.3" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo", tag = "v2.12.3" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo", tag = "v2.12.3" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo", tag = "v2.12.3" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo", tag = "v2.12.3" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo", tag = "v2.12.3" }
cairo-lang-syntax-codegen = { git = "https://github.com/starkware-libs/cairo", tag = "v2.12.3" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo", tag = "v2.12.3" }
