[package]
name = "cairo_lang_reader"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
cairo-lang-defs = "*"
cairo-lang-diagnostics = "*"
cairo-lang-filesystem = "*"
cairo-lang-macro = { version = "0.2.0", git = "https://github.com/software-mansion/scarb.git" }
cairo-lang-parser = "*"
cairo-lang-syntax = "*"
smol_str = "0.3.2"

[patch.crates-io]
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo", tag = "v2.12.3" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo", tag = "v2.12.3" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo", tag = "v2.12.3" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo", tag = "v2.12.3" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo", tag = "v2.12.3" }
